--- a/template.html
+++ b/template.html
@@ -7,5 +7,12 @@
         <title>Blog</title>
     </head>
     <body>
+
+          <header>
+                <div class="logo">
+                    <h1 class="logo-text"><span>Ruthwik</span>Hacks</h1>
+                </div>
+            </header>
+        
     </body>
 </html>
