--- a/template.html
+++ b/template.html
@@ -34,14 +34,19 @@
                     <li><a href="#">Resume</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Stay Updated</a></li>
+                   <!--<li><a href="#">Stay Updated</a></li>-->
 
+                    <a href="#">Ruthwik Neergunda</a>
+
+                  <li>
                     <ul>
                     <li>
                         <li><a href="#">Dashboard</a></li>
                         <li><a href="#" class="logout">Logout</a></li>
                     </li>
                     </ul>
+                  </li>  
+                  
 
                 </ul>
 
