menu-bar icon added to header

--- a/template.html
+++ b/template.html
@@ -27,6 +27,9 @@
                     <h1 class="logo-text"><span>Ruthwik</span>Hacks</h1>
                 </div>
               
+                <!--menubar-icon-->
+                <i class="fa fa-bars"></i>
+              
                 <!--nav-bar-->
                 <ul class="nav">
                     <li><a href="#">Home</a></li>
