Logo text edited from "RuthvikHacks"

--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@
 
                 <!--Logo-->
                 <div class="logo">
-                    <h1 class="logo-text"><span>Ruthwik</span>Hacks</h1>
+                    <h1 class="logo-text"><span>Krish</span>Innit</h1>
                 </div>
               
                 <!--menubar-icon-->
