menubar has been placed inside a div

--- a/template.html
+++ b/template.html
@@ -31,7 +31,7 @@
           <header>
 
                 <!--menubar-icon-->
-                <i class="fa fa-bars"></i>
+                <div class="menubar-icon"><i class="fa fa-bars"></i></div> 
 
                 <!--Logo-->
                 <div class="logo">
