tag added for resume extension

--- a/template.html
+++ b/template.html
@@ -42,21 +42,21 @@
                 <ul class="nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Posts</a></li>
-                    <li><a href="#">Resume</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
 
-                    <a href="#">Ruthwik Neergunda</a>
-
-                  <li>
-                    <ul>
                     <li>
-                        <li><a href="#">Dashboard</a></li>
-                        <li><a href="#" class="logout">Logout</a></li>
+                        <a href="#">
+                            <i class="fa fa-bars"></i>
+                            Resume
+                            <i class="fa fa-chevron-down"></i>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="#">My-CV</a>
+                            </li>
+                        </ul>
                     </li>
-                    </ul>
-                  </li>  
-                  
 
                 </ul>
 
