class created for cv text

--- a/template.html
+++ b/template.html
@@ -46,14 +46,13 @@
                     <li><a href="#">Contact</a></li>
 
                     <li>
-                        <a href="#">
-                            <i class="fa fa-bars"></i>
+                        <a href="#">                            
                             Resume
                             <i class="fa fa-chevron-down"></i>
                         </a>
                         <ul>
                             <li>
-                                <a href="#">My-CV</a>
+                                <a href="#" class="cv-text">My-CV</a>
                             </li>
                         </ul>
                     </li>
