hover link added to home tag under the header section

--- a/template.html
+++ b/template.html
@@ -40,7 +40,14 @@
               
                 <!--nav-bar-->
                 <ul class="nav">
-                    <li><a href="#">Home</a></li>
+                    <li>
+                        <a href="#">Home</a>
+                        <ul class="left:0px;">
+                            <li>
+                                <a href="#">Landing Page</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="#">Posts</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
