link classified "landing-page" under header section

--- a/template.html
+++ b/template.html
@@ -44,7 +44,7 @@
                         <a href="#">Home</a>
                         <ul class="left:0px;">
                             <li>
-                                <a href="#">Landing Page</a>
+                                <a href="#" class="landing-page">Landing Page</a>
                             </li>
                         </ul>
                     </li>
