menu-bar classification
menu bar name changed from "menu-bar" to "menu-toggle"

--- a/template.html
+++ b/template.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <!--menubar-icon-->
-                <div class="menubar-icon"><i class="fa fa-bars"></i></div> 
+                <div class="menu-toggle"><i class="fa fa-bars"></i></div> 
               
                 <!--nav-bar-->
                 <ul class="nav">
