--- a/template.html
+++ b/template.html
@@ -73,7 +73,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha512-+NqPlbbtM1QqiK8ZAo4Yrj2c4lNQoGv8P79DPtKzj++l5jnN39rHA/xsqn8zE9l0uSoxaCdrOgFs6yjyfbBxSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
          <!--Custom Script-->
-            <script src="js/script.js"></script>
+            <script src="js/template.js"></script>
         
     </body>
 </html>
