JQuery Slick JS Plugin for slider carousel added to head section.

--- a/template.html
+++ b/template.html
@@ -30,7 +30,10 @@
 
         <!--Custom Script-->
         <script src="js/template.js"></script>
-        
+
+        <!--slick-Jquery-->
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
     </head>
     <body>
 
