--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@
         <script src="js/template.js"></script>
 
         <!--slick-Jquery-->
-        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     </head>
     <body>
